crates/java-syntax/tests/snapshots/parser_snapshots__parse_class_with_multi_field.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { int a, b; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "a"
COMMA ","
WHITESPACE " "
IDENTIFIER "b"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  CLASS_DECL
    MODIFIER_LIST
    CLASS_KW "class"
    WHITESPACE " "
    IDENTIFIER "A"
    CLASS_BODY
      WHITESPACE " "
      L_BRACE "{"
      FIELD_DECL
        MODIFIER_LIST
        TYPE
          WHITESPACE " "
          INT_KW "int"
        VARIABLE_DECLARATOR_LIST
          VARIABLE_DECLARATOR
            WHITESPACE " "
            IDENTIFIER "a"
          COMMA ","
          VARIABLE_DECLARATOR
            WHITESPACE " "
            IDENTIFIER "b"
        SEMICOLON ";"
      WHITESPACE " "
      R_BRACE "}"
