crates/java-syntax/tests/snapshots/parser_snapshots__parse_class_with_multi_initialized_field.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { int a = 1, b = 2; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "a"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
COMMA ","
WHITESPACE " "
IDENTIFIER "b"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "2"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..29
  CLASS_DECL@0..29
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    CLASS_BODY@7..29
      WHITESPACE@7..8 " "
      L_BRACE@8..9 "{"
      FIELD_DECL@9..27
        WHITESPACE@9..10 " "
        TYPE@10..13
          INT_KW@10..13 "int"
        VARIABLE_DECLARATOR_LIST@13..26
          WHITESPACE@13..14 " "
          VARIABLE_DECLARATOR@14..19
            IDENTIFIER@14..15 "a"
            WHITESPACE@15..16 " "
            EQUAL@16..17 "="
            LITERAL@17..19
              WHITESPACE@17..18 " "
              INTEGER_LITERAL@18..19 "1"
          COMMA@19..20 ","
          VARIABLE_DECLARATOR@20..26
            WHITESPACE@20..21 " "
            IDENTIFIER@21..22 "b"
            WHITESPACE@22..23 " "
            EQUAL@23..24 "="
            LITERAL@24..26
              WHITESPACE@24..25 " "
              INTEGER_LITERAL@25..26 "2"
        SEMICOLON@26..27 ";"
      WHITESPACE@27..28 " "
      R_BRACE@28..29 "}"
