crates/java-syntax/tests/snapshots/parser_snapshots__parse_conditional_expr.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void test() {
        int max = num1 > num2? num1 : num2;
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "test"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "max"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
IDENTIFIER "num1"
WHITESPACE " "
GREATER ">"
WHITESPACE " "
IDENTIFIER "num2"
QUESTION "?"
WHITESPACE " "
IDENTIFIER "num1"
WHITESPACE " "
COLON ":"
WHITESPACE " "
IDENTIFIER "num2"
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..83
  CLASS_DECL@0..82
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    CLASS_BODY@10..82
      WHITESPACE@10..11 " "
      L_BRACE@11..12 "{"
      METHOD_DECL@12..80
        WHITESPACE@12..17 "\n    "
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "test"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        BLOCK@28..80
          WHITESPACE@28..29 " "
          L_BRACE@29..30 "{"
          LOCAL_VARIABLE_DECLARATION_STMT@30..74
            WHITESPACE@30..39 "\n        "
            LOCAL_VARIABLE_DECLARATION@39..73
              TYPE@39..42
                INT_KW@39..42 "int"
              VARIABLE_DECLARATOR_LIST@42..73
                WHITESPACE@42..43 " "
                VARIABLE_DECLARATOR@43..73
                  IDENTIFIER@43..46 "max"
                  WHITESPACE@46..47 " "
                  EQUAL@47..48 "="
                  COND_EXPR@48..73
                    WHITESPACE@48..49 " "
                    BINARY_EXPR@49..60
                      LITERAL@49..53
                        IDENTIFIER@49..53 "num1"
                      WHITESPACE@53..54 " "
                      GREATER@54..55 ">"
                      LITERAL@55..60
                        WHITESPACE@55..56 " "
                        IDENTIFIER@56..60 "num2"
                    QUESTION@60..61 "?"
                    LITERAL@61..66
                      WHITESPACE@61..62 " "
                      IDENTIFIER@62..66 "num1"
                    WHITESPACE@66..67 " "
                    COLON@67..68 ":"
                    LITERAL@68..73
                      WHITESPACE@68..69 " "
                      IDENTIFIER@69..73 "num2"
            SEMICOLON@73..74 ";"
          WHITESPACE@74..79 "\n    "
          R_BRACE@79..80 "}"
      WHITESPACE@80..81 "\n"
      R_BRACE@81..82 "}"
  WHITESPACE@82..83 "\n"
