crates/java-syntax/tests/snapshots/parser_snapshots__parse_do_while_stmt.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void func() {
        do {

        } while (true);
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
DO_KW "do"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n\n        "
R_BRACE "}"
WHITESPACE " "
WHILE_KW "while"
WHITESPACE " "
L_PAREN "("
TRUE_LIT "true"
R_PAREN ")"
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  CLASS_DECL
    CLASS_KW "class"
    WHITESPACE " "
    IDENTIFIER "Test"
    CLASS_BODY
      WHITESPACE " "
      L_BRACE "{"
      METHOD_DECL
        WHITESPACE "\n    "
        VOID_KW "void"
        WHITESPACE " "
        IDENTIFIER "func"
        FORMAL_PARAMETERS
          L_PAREN "("
          R_PAREN ")"
        BLOCK
          WHITESPACE " "
          L_BRACE "{"
          DO_STMT
            WHITESPACE "\n        "
            DO_KW "do"
            BLOCK
              WHITESPACE " "
              L_BRACE "{"
              WHITESPACE "\n\n        "
              R_BRACE "}"
            WHITESPACE " "
            WHILE_KW "while"
            PARENTHESIZED_EXPR
              WHITESPACE " "
              L_PAREN "("
              LITERAL
                TRUE_LIT "true"
              R_PAREN ")"
            SEMICOLON ";"
          WHITESPACE "\n    "
          R_BRACE "}"
      WHITESPACE "\n"
      R_BRACE "}"
  WHITESPACE "\n"
