crates/java-syntax/tests/snapshots/parser_snapshots__parse_empty_class.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A {}
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..10
  CLASS_DECL@0..10
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    CLASS_BODY@7..10
      WHITESPACE@7..8 " "
      L_BRACE@8..9 "{"
      R_BRACE@9..10 "}"
