crates/java-syntax/tests/snapshots/parser_snapshots__parse_empty_enum.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
enum E {}
TOKENS:
ENUM_KW "enum"
WHITESPACE " "
IDENTIFIER "E"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..9
  ENUM_DECL@0..9
    ENUM_KW@0..4 "enum"
    WHITESPACE@4..5 " "
    IDENTIFIER@5..6 "E"
    ENUM_BODY@6..9
      WHITESPACE@6..7 " "
      L_BRACE@7..8 "{"
      R_BRACE@8..9 "}"
