crates/java-syntax/tests/snapshots/parser_snapshots__parse_empty_record.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
record R(int x) {}
TOKENS:
IDENTIFIER "record"
WHITESPACE " "
IDENTIFIER "R"
L_PAREN "("
INT_KW "int"
WHITESPACE " "
IDENTIFIER "x"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..18
  RECORD_DECL@0..18
    IDENTIFIER@0..6 "record"
    WHITESPACE@6..7 " "
    IDENTIFIER@7..8 "R"
    FORMAL_PARAMETERS@8..15
      L_PAREN@8..9 "("
      FORMAL_PARAMETER@9..14
        TYPE@9..12
          INT_KW@9..12 "int"
        WHITESPACE@12..13 " "
        IDENTIFIER@13..14 "x"
      R_PAREN@14..15 ")"
    RECORD_BODY@15..18
      WHITESPACE@15..16 " "
      L_BRACE@16..17 "{"
      R_BRACE@17..18 "}"
